lost-password: Polish html code

--- a/app/views/site/lostPassword.scala.html
+++ b/app/views/site/lostPassword.scala.html
@@ -35,18 +35,11 @@
 
     <form method="post" action="@routes.PasswordResetApp.requestResetPasswordEmail()">
       <dl>
-        <dt>
-          <label for="loginId">@Messages("user.loginId")</label>
-        </dt>
         <dd>
-          <input type="text" id="loginId" name="loginId" required="required" placeholder="@Messages("user.yourLoginId")" class="text" @if(!UserApp.currentUser().isAnonymous){value="@UserApp.currentUser().loginId"}>
+          <input type="text" id="loginId" name="loginId" required="required" placeholder="@Messages("user.loginId")" class="text" @if(!UserApp.currentUser().isAnonymous){value="@UserApp.currentUser().loginId"}>
         </dd>
-
-        <dt>
-          <label for="emailAddress">@Messages("user.email")</label>
-        </dt>
         <dd>
-          <input type="text" id="emailAddress" name="emailAddress" required="" placeholder="@Messages("user.yourEmail")" class="text" @if(!UserApp.currentUser().isAnonymous){value="@UserApp.currentUser().email"}>
+          <input type="text" id="emailAddress" name="emailAddress" required="" placeholder="@Messages("user.email")" class="text" @if(!UserApp.currentUser().isAnonymous){value="@UserApp.currentUser().email"}>
         </dd>
       </dl>
 
