--- a/app/views/user/resetPassword.scala.html
+++ b/app/views/user/resetPassword.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2013 NAVER Corp.
-* http://yobi.io
-*
-* @author Suwon Chae
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(message: String, newUserForm: play.data.Form[User], hashString: String)
 @import utils.TemplateHelper._
@@ -34,18 +20,11 @@
     <form action="@routes.PasswordResetApp.resetPassword()" method="post" name="passwordReset">
       <input type="hidden" name="hashString" value="@hashString">
       <dl>
-        <dt>
-          <label for="password">@Messages("user.password")</label>
-        </dt>
         <dd>
-          <input id="password" type="password" name="password" class="text password" placeholder="" autocomplete="off">
+          <input id="password" type="password" name="password" class="text password" placeholder="@Messages("user.password")" autocomplete="off">
         </dd>
-
-        <dt>
-          <label for="retypedPassword">@Messages("validation.retypePassword")</label>
-        </dt>
         <dd>
-          <input id="retypedPassword" type="password" name="retypedPassword" class="text password" placeholder="" autocomplete="off">
+          <input id="retypedPassword" type="password" name="retypedPassword" class="text password" placeholder="@Messages("validation.retypePassword")" autocomplete="off">
         </dd>
       </dl>
 
