view: Introduce two column view mode

--- a/app/assets/stylesheets/less/_responsive.less
+++ b/app/assets/stylesheets/less/_responsive.less
@@ -433,6 +433,9 @@
             }
         }
     }
+    .page-nums {
+        margin-left: 0;
+    }
 }
 
 @media all and (max-width:1199px){
@@ -534,7 +537,6 @@
     }
     .project-header-outer {
         max-width: 1199px;
-        min-width: 1000px;
 
         .project-header-inner {
             .project-header-wrap {
@@ -546,8 +548,6 @@
 
     .project-menu-outer {
         max-width: 1199px;
-        min-width: 1000px;
-        padding:0 10px;
 
         .project-menu-inner {
             width: 95%;
