--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -151,7 +151,7 @@
 
         yobi.OriginalMessage.hide($("[data-via-email]"));
 
-        $('.logo, .title > a, .project-menu-nav > li > a, .show-progress-bar, .project-breadcrumb > span > a, .project-name > a, a[class="title"]').on('click', function(){
+        $('.logo, .title > a, .project-menu-nav > li > a, .show-progress-bar, .project-breadcrumb > span > a, .project-name > a, a[class="title"]').on('click.progressbar', function(){
             NProgress.set(0.7);
             NProgress.start();
         });
