--- a/app/views/issue/list.scala.html
+++ b/app/views/issue/list.scala.html
@@ -20,6 +20,8 @@
 @common.select2()
 @common.calendar()
 
+<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery.pageslide.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.twoColumnMode.js")"></script>
 <script type="text/javascript">
   $(function(){
     // issue.List
