--- a/app/views/organization/group_issue_search_partial.scala.html
+++ b/app/views/organization/group_issue_search_partial.scala.html
@@ -34,7 +34,7 @@
 }
 
 <div pjax-container class="row-fluid issue-list-wrap">
-    <div class="span2 span-hard-wrap">
+    <div class="left-menu span2 span-hard-wrap">
         <div class="inner advanced">
             @group_issue_list_quicksearch(param)
 
@@ -64,6 +64,7 @@
         </div>
     </div>
     <div class="span10 span-hard-wrap" id="span10">
+        @common.twoColumnModeCheckboxArea()
         <ul class="nav nav-tabs nm">
         @for(state <- Array(State.OPEN, State.CLOSED)) {
             <li @if(param.state == state.state) { class="active" }>
