--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3224,7 +3224,7 @@ div.markdown-preview {
 
     .project-btn-item {
         a {
-            width: 196px;
+            width: 90%;
             margin-bottom: 15px;
         }
     }
@@ -6810,4 +6810,50 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 
 #new-file-link {
     margin: 0 5px;
+}
+
+.two-column-icon {
+    display: inline-block;
+    line-height: 30px;
+    margin-left: 10px;
+    i {
+        font-size: 16px;
+        margin-right: 5px;
+        line-height: 20px;
+    }
+
+    label {
+        padding-top: 7px;
+    }
+}
+
+.absoluteAndLeftMargin {
+    position: absolute;
+    margin-left: 260px;
+}
+
+.page-nums {
+    margin-left: -120px !important;
+}
+
+#pageslide {
+    /* These styles MUST be included. Do not change. */
+    display: none;
+    position: absolute;
+    position: fixed;
+    top: 0;
+    height: 100%;
+    z-index: 999999;
+
+    /* Specify the width of your pageslide here */
+    width: 50%;
+    padding: 1px;
+
+    /* These styles are optional, and describe how the pageslide will look */
+    background-color: #333;
+    color: #FFF;
+    -webkit-box-shadow: inset 0 0 5px 5px #222;
+    -moz-shadow: inset 0 0 5px 5px #222;
+    //box-shadow: inset 0 0 5px 5px #222;
+    box-shadow: 2px 2px 8px #000;
 }
