--- a/app/views/git/list.scala.html
+++ b/app/views/git/list.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2013 NAVER Corp.
-* http://yobi.io
-*
-* @author Keesun Baik
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(project: Project, page: com.avaje.ebean.Page[PullRequest],
     condition: controllers.PullRequestApp.SearchCondition, requestType: String)
@@ -31,8 +17,12 @@
 
 @common.select2()
 
+<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery.pageslide.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.twoColumnMode.js")"></script>
 <script type="text/javascript">
     $(document).ready(function(){
+        _initTwoColumnMode();
+
         var isFirefox = navigator.userAgent.toLowerCase().indexOf('firefox') > -1;
         var isSafari = navigator.userAgent.indexOf('Safari') != -1 && navigator.userAgent.indexOf('Chrome') == -1;
         // Workaround for pjax bug result from bfcache
