--- a/app/views/organization/group_board_list.scala.html
+++ b/app/views/organization/group_board_list.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2015 NAVER Corp.
-* http://yobi.io
-*
-* @author Suwon Chae
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(title:String, organization:Organization, page:com.avaje.ebean.Page[Posting], param:BoardApp.SearchCondition, notices:List[models.Posting])
 
@@ -56,6 +42,7 @@
                     <input name="filter" class="textbox group-board" type="text" placeholder="@Messages("title.searchByKeyword")" value="@param.filter">
                     <button type="submit" class="search-btn"><i class="yobicon-search"></i></button>
                 </div>
+                @common.twoColumnModeCheckboxArea(false)
             </form>
         </div>
 
@@ -99,6 +86,8 @@
 
     </div>
 </div>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery.pageslide.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.twoColumnMode.js")"></script>
 <script type="text/javascript">
 	$(document).ready(function() {
 		$yobi.loadModule("board.List", {
