view: Remove animation of side pane view

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6847,7 +6847,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 
     /* Specify the width of your pageslide here */
     width: 50%;
-    padding: 1px;
+    padding: 0;
 
     /* These styles are optional, and describe how the pageslide will look */
     background-color: #333;
