--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6850,10 +6850,10 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     padding: 0;
 
     /* These styles are optional, and describe how the pageslide will look */
-    background-color: #333;
     color: #FFF;
     -webkit-box-shadow: inset 0 0 5px 5px #222;
     -moz-shadow: inset 0 0 5px 5px #222;
     //box-shadow: inset 0 0 5px 5px #222;
     box-shadow: 2px 2px 8px #000;
+    background: #FFF url('/assets/images/loading-gif-2.gif') no-repeat center;
 }
