css: Subtle adjustments in my issues page

--- a/app/assets/stylesheets/less/_responsive.less
+++ b/app/assets/stylesheets/less/_responsive.less
@@ -48,6 +48,9 @@
             padding: 10px 0 !important;
             .title {
                 font-size: 16px;
+                &.project {
+                    font-size: 12px;
+                }
             }
         }
     }
