board: Remove 'target=_blank' from new button link in a page

--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -126,7 +126,7 @@
                         <dl>
                             @if(project.menuSetting.board) {
                                 <dd class="project-btn-item">
-                                    <a href="@routes.BoardApp.newPostForm(project.owner, project.name)" class="ybtn ybtn-success" target="_blank">@Messages("post.write")</a>
+                                    <a href="@routes.BoardApp.newPostForm(project.owner, project.name)" class="ybtn ybtn-success">@Messages("post.write")</a>
                                 </dd>
                             }
                         </dl>
