--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6836,6 +6836,10 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     margin-left: -120px !important;
 }
 
+.highlightBg {
+    background-color: #eee !important;
+}
+
 #pageslide {
     /* These styles MUST be included. Do not change. */
     display: none;
