history: Make more small and readable change history

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3919,12 +3919,11 @@ label.issue-item-row {
     }
     .diff-added {
         background-color: #abdd52;
-        padding: 2px;
+        padding: 2px 0;
     }
     .diff-deleted {
         background-color: #fda9a6;
-        text-decoration: line-through;
-        padding: 2px;
+        padding: 2px 0;
     }
     .diff-ellipsis {
         color: #bdbdbd;
