markdown: Change some case of li styles
Now three case of styles exists:

- normal: no blank line for each bullet lines
- important: one blank line for each first bullet
   - Assume that first bullet is some kind of titles
- new list: two or more blank lines for each first bullet
   - Assume that new bullets begins

See: #144

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -39,8 +39,12 @@ code {
   }
 
   li > p {
-    margin-top: 0;
-    margin-bottom: 5px;
+    margin-top: 16px;
+    margin-bottom: 12px;
+  }
+
+  > ul {
+    margin-top: 14px;
   }
 
   a {
