--- a/app/views/error/notfound.scala.html
+++ b/app/views/error/notfound.scala.html
@@ -25,6 +25,7 @@
         case "issue_post" => utils.MenuType.ISSUE
         case "board_post" => utils.MenuType.BOARD
         case "milestone" => utils.MenuType.MILESTONE
+        case "code" => utils.MenuType.CODE
         case _ => utils.MenuType.PROJECT_HOME
     }
 }
@@ -34,13 +35,14 @@
         case "issue_post" => routes.IssueApp.issues(project.owner, project.name, "all")
         case "board_post" => routes.BoardApp.posts(project.owner, project.name)
         case "milestone" => routes.MilestoneApp.milestones(project.owner, project.name)
+        case "code" => routes.ProjectApp.settingForm(project.owner, project.name)
         case _ => "javascript:history.back();"
     }
 }
 
 @getMessage(target:String) = @{
     if(target){
-        Messages("error.notfound." + target)
+        Messages("error.notfound." + target, title)
     } else {
         Messages("error.notfound")
     }
