--- a/app/views/site/projectList.scala.html
+++ b/app/views/site/projectList.scala.html
@@ -1,26 +1,13 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Hwi Ahn
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(message: String, currentPage: com.avaje.ebean.Page[Project], filter:String)
 
 @import utils.TemplateHelper._
+@import utils.JodaDateUtil._
 
 @siteMngLayout(message) {
     <div class="title_area">
@@ -54,10 +41,13 @@
                     @project.owner/@project.name
                 </a>
             </div>
-            <div class="span5 listitem-col">
+            <div class="span4 listitem-col">
               @project.overview
             </div>
             <div class="span2 listitem-col">
+            @geYMDDate(project.createdDate)
+            </div>
+            <div class="span1 listitem-col">
                 <button class="ybtn ybtn-danger" data-project-name="@project.owner/@project.name" data-toggle="delete-project" data-href="@routes.SiteApp.deleteProject(project.id)">@Messages("button.delete")</button>
             </div>
         </li>
