--- a/public/javascripts/lib/highlight/styles/default.css
+++ b/public/javascripts/lib/highlight/styles/default.css
@@ -5,6 +5,10 @@ Original highlight.js style (c) Ivan Sagalaev <maniac@softwaremaniacs.org>
 */
 
 .hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  background: #F0F0F0;
 }
 
 
