feature: Show group list of site

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -376,3 +376,15 @@ input:-webkit-autofill {
         -webkit-box-shadow: 0 0 0 100px #fcfcfc inset;
     }
 }
+
+.title_area {
+    .nav {
+        margin-top: 10px;
+    }
+    ul {
+        li {
+            font-size: 16px;
+            font-weight: normal;
+        }
+    }
+}
