--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -56,7 +56,7 @@
             </li>
             @if(!Application.HIDE_PROJECT_LISTING){
                 <li class="@isActiveMenu(MenuType.PROJECTS)">
-                    <a href="@routes.ProjectApp.projects()" class="show-progress-bar">@Messages("title.projectList")</a>
+                    <a href="@routes.ProjectApp.projects()" class="show-progress-bar">@Messages("title.list")</a>
                 </li>
                 <li class="divider"></li>
             }
