--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -591,13 +591,9 @@
 }
 
 .site-breadcrumb-outer {
-    height: 59px;
-    border-bottom:1px solid #ddd;
-
     .site-breadcrumb-inner {
         width: 1170px;
         margin:0 auto;
-        height: 59px;
 
         h3 {
             padding:15px 0 14px;
@@ -1681,7 +1677,6 @@
                 width: 50px;
                 height: 50px;
                 margin-right: 10px;
-                border: 1px solid #DDD9D9;
                 border-radius: 3px !important;
                 position: relative;
                 img {
@@ -1694,6 +1689,7 @@
                 font-size: 20px;
                 font-weight: bold;
                 margin-bottom: 5px;
+                margin-left: 10px;
 
                 .yobicon-lock { color:#7F8C8D;}
                 .owner-name-small{ color:#999; font-size: 19px; }
