--- a/app/views/organization/list.scala.html
+++ b/app/views/organization/list.scala.html
@@ -31,7 +31,7 @@
     <div class="project-page-wrap">
     	<div class="search-wrap">
     		<div id="search" class="pull-left">
-    			<form action="@routes.ProjectApp.projects()" method="get">
+    			<form action="@routes.OrganizationApp.orgList()" method="get">
     				<div class="search-bar">
                         <input name="filter" class="textbox" type="text" placeholder="@Messages("site.project.filter")" value="@filter">
                         <button type="submit" class="search-btn"><i class="yobicon-search"></i></button>
