list: Update search field message and add autofocus

--- a/app/views/organization/list.scala.html
+++ b/app/views/organization/list.scala.html
@@ -33,7 +33,7 @@
     		<div id="search" class="pull-left">
     			<form action="@routes.OrganizationApp.orgList()" method="get">
     				<div class="search-bar">
-                        <input name="filter" class="textbox" type="text" placeholder="@Messages("site.project.filter")" value="@filter">
+                        <input name="filter" class="textbox" type="text" placeholder="@Messages("site.organization.filter")" value="@filter" autofocus>
                         <button type="submit" class="search-btn"><i class="yobicon-search"></i></button>
                     </div>
     			</form>
